[dev] yaml config search
- create search config class
- add exception for missing files
- edit sample files

--- a/gmconsole/config/config.yaml.sample
+++ b/gmconsole/config/config.yaml.sample
@@ -1,8 +1,6 @@
-- app:
-  environment: local
+- environment: local
   settings:
     string: 'Hello Giuseppe in Local!'
-- app:
-  environment: stage
+- environment: stage
   settings:
     string: 'Hello Giuseppe in Stage!'
